<resources>
    <string name="app_name">PlusCare</string>
    <string name="loginUsername">Nome de Utilizador</string>
    <string name="loginPassword">Password</string>
    <string name="confirmarLogin">Autenticar</string>
    <string name="noAccount">Sem conta? Clique aqui</string>
    <string name="createUsername">Nome da conta</string>
    <string name="nickname">Alcunha: </string>
    <string name="createEmail">Email da conta</string>
    <string name="createPassword">Insira a Password</string>
    <string name="createPasswordVerify">Confirmação da Password</string>
    <string name="buttonCreate">Criar</string>
    <string name="buttonCancel">Cancelar</string>
    <string name="passwordUnmatched">As passwords não coincidem</string>
    <string name="usernameNotAvailable">Nome de utilizador não disponível</string>
    <string name="createdAccountSuccess">Conta criada com sucesso</string>
    <string name="loginSuccessfully">Login efetuado com sucesso</string>
    <string name="errorOnLogin">As credenciais estão erradas</string>
    <string name="nomeUtente">Nome: </string>
    <string name="sobrenomeUtente">Sobrenome: </string>
    <string name="idadeUtente">Idade: </string>
    <string name="nomePrefUtente">Alcunha: </string>
    <string name="dadosUtente">Dados</string>
    <string name="dadosSaudeUtente">Saúde</string>
    <string name="address">Morada: </string>
    <string name="bloodType">Tipo sanguíneo: </string>
    <string name="profession">Profissão</string>
    <string name="educationLevel">Grau de Escolaridade: </string>
    <string name="NIF">NIF: </string>
    <string name="NISS">NISS: </string>
    <string name="CC">CC: </string>
    <string name="NUS">NUS: </string>
    <string name="nationatility">Nacionalidade: </string>
    <string name="socialSituation">Estado Civil: </string>
    <string name="dateOfBirth">Data de Nascimento: </string>
    <string name="diseases">Doenças: </string>
    <string name="desabilities">Deficiências: </string>
    <string name="dadosCuidadosUtente">Cuidados</string>
    <string name="nextMedication">Próxima medicação</string>
    <string name="nextHygiene">Próxima Higiene</string>
    <string name="dateValidity">Data de validade: </string>
    <string name="doseToma">Dose: </string>
    <string name="dateProvided">Hora de toma: </string>
    <string name="typeHygiene">Tipo de higiene: </string>
    <string name="descritpion">Descrição: </string>
    <string name="details">Detalhes: </string>
    <string name="tarefas">Tarefas: </string>
    <string name="medicamentos">Medicamentos: </string>
    <string name="higiene">Higiene: </string>
    <string name="ocorrencias">Ocorrências: </string>
    <string name="total">Total: </string>
    <string name="porFazer">Por fazer: </string>
    <string name="listarTarefas">Listar Tarefas</string>
    <string name="listarMedicamentos">Listar Medicamentos</string>
    <string name="listarHigiene">Listar Higiene</string>
    <string name="listarOcorrencias">Listar Ocorrências</string>
    <string name="tasksDay">Tarefas do dia: </string>
    <string name="tasksDay2">Tarefas </string>
    <string name="hygieneDay">Higiene do dia: </string>
    <string name="medicineDay">Medicamentos do dia: </string>
    <string name="ocorrenciasDay">Ocorrências do dia: </string>
    <string name="ocorrenciasDay2">Ocorrências </string>
    <string name="Tarefas">Tarefas</string>
    <string name="Tarefa">Tarefa</string>
    <string name="Medicamentos">Medicamentos</string>
    <string name="Ocorrencias">Ocorrências</string>
    <string name="Higiene">Higiene</string>
    <string name="Utentes">Utentes</string>
    <string name="Notificacoes">Notificações</string>
    <string name="todayStats">Estatísticas de Hoje</string>
    <string name="PorFazer">Por fazer</string>
    <string name="Completas">Completas</string>
    <string name="Incompletas">Falhadas</string>
    <string name="dataAdd">Data inserido: </string>
    <string name="horaInicio">Data inicial: </string>
    <string name="horaFim">Data final: </string>
    <string name="comments">Comentários: </string>
    <string name="tempoRestante">Tempo Restante: </string>
    <string name="causas">Causas:</string>
    <string name="justificacao">Justificação:</string>
    <string name="listaUtilizadores">Lista de Utilizadores</string>
    <string name="roleUser">Cargo: </string>
    <string name="buttonCriar">Criar</string>
    <string name="arquivadas">Arquivadas</string>
    <string name="novas">Novas</string>
    <string name="listMedicamentos">Lista de Medicamentos</string>
    <string name="listOcorrencias">Lista de Ocorrencias</string>
    <string name="listTarefas">Lista de Tarefas</string>
    <string name="listHigienes">Lista de Higienes</string>
    <string name="createAddress">Introduza a sua morada</string>
    <string name="createDateBirth">Introduza a sua idade</string>
    <string name="height">Altura (cm)</string>
    <string name="loadingText">A obter dados... </string>
    <string name="detalhes">Detalhes</string>
    <string name="tipo">Tipo: </string>
    <string name="hora">Hora: </string>
    <string name="function">Função: </string>
    <string name="id">Id: </string>
    <string name="piso">Secção</string>
    <string name="email">Email: </string>
    <string name="nrConsumidores">Utentes que consomem: </string>
    <string name="ver">Ver</string>
    <string name="Utilizadores">Utilizadores</string>
    <string name="Admin">Admin</string>
    <string name="Auxiliar">Auxiliar</string>
    <string name="Enfermeira">Enfermeira</string>
    <string name="titulo">Título: </string>
    <string name="estadoCivil">Estado civil</string>
    <string name="lblSearch">Procurar </string>
    <string name="lblCreate">Criar </string>
    <string name="txtSearch">Escreva para procurar na lista</string>
    <string name="editarHigiene">Editar</string>
    <string name="cancelar">Cancelar</string>
    <string name="apagar">Apagar</string>
    <string name="dialog_Info">Tem a certeza que pretende apagar?</string>
    <string name="introduzirTituloHigiene">Novo Título da Higiene</string>
    <string name="introduzirDescricaoHigiene">Nova Descrição da Higiene</string>
    <string name="voltar">Voltar</string>
    <string name="morada">Morada</string>
    <string name="escolaridade">Escolaridade</string>
    <string name="selecionarImagem">Selecione uma imagem</string>
    <string name="criarUtente">Criar utente</string>

    <string name="lblNome">Nome</string>
    <string name="lblAlcunha">Alcunha</string>
    <string name="lblDataNascimento">Data nascimento</string>
    <string name="lblMorada">Morada</string>
    <string name="lblProfissao">Profissão</string>
    <string name="lblEscolaridade">Grau de Escolaridade: </string>
    <string name="lblNIF">NIF</string>
    <string name="lblNISS">NISS</string>
    <string name="lblCC">CC</string>
    <string name="lblNUS">NUS</string>
    <string name="lblNationatility">Nacionalidade</string>
    <string name="lblEstadoCivil">Estado Civil</string>

    <string-array name="estadoCivil">
        <item>Solteiro</item>
        <item>Casado</item>
        <item>Viuvo</item>
        <item>Divorciado</item>
    </string-array>

    <string-array name="escolaridadeArray">
        <item>Ensino primário</item>
        <item>Ensino secundário</item>
        <item>Ensino superior</item>
    </string-array>


    <string-array name="tipoUtilizador">
        <item>Admin</item>
        <item>Enfermeira</item>
        <item>Auxiliar</item>
    </string-array>
    <string-array name="tipoMedicamento">
        <item>Comprimido</item>
        <item>Dissolúvel</item>
        <item>Injetável</item>
        <item>Creme</item>
    </string-array>
    <string name="detalhesUtilizador">User Details</string>
    <string name="tasks">Tarefas</string>
    <string name="andar">Andar: </string>
    <string name="dataInicio">Início: </string>
    <string name="dataFim">Fim: </string>
    <string name="tasksToBeDone">Tarefas do dia: </string>
    <string name="tasksTotal">Total Tarefas: </string>
    <string name="perfil">Perfil </string>

</resources>