<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageButton
        android:id="@+id/imagemSair"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="10sp"
        android:layout_marginRight="30sp"
        android:backgroundTint="#00FFFFFF"
        app:srcCompat="@drawable/ic_baseline_close_24" />

    <TextView
        android:id="@+id/dialog_Info"
        android:layout_width="match_parent"
        android:layout_height="71dp"
        android:gravity="center"
        android:text="@string/dialog_Info"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10sp"
            android:text="@string/apagar"
            android:visibility="visible" />

        <Button
            android:id="@+id/btn_cancel_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:text="@string/cancelar"
            android:visibility="visible" />

    </LinearLayout>

</LinearLayout>